# Sandeshah

./: .gitignore  main.py  pyproject.toml
src/sandeshah/: config.py  main.py
src/sandeshah/channel/: email.py  manager.py  sms.py
src/sandeshah/notification/: base.py  handler.py  processor.py
src/sandeshah/queue/: inmemory.py  manager.py  sqs.py
tests/queue/: test_manager.py
