[tool.poetry]
name = "sandeshah"
version = "0.1.0"
description = ""
authors = ["gauravbole <gaurav.r.bole@gmail.com>"]
readme = "README.md"
packages = [{include = "sandeshah", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
